--- a/.gitignore
+++ b/.gitignore
@@ -85,6 +85,6 @@ fastlane/test_output
 
 iOSInjectionProject/
 
-Secrets.xcconfig
+Configuration/Secrets.xcconfig
 
 # End of https://www.toptal.com/developers/gitignore/api/swift
