--- a/MarvelUnbound/Configuration/Info.plist
+++ b/MarvelUnbound/Configuration/Info.plist
@@ -2,7 +2,24 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 	<key>PRIVATE_KEY</key>
 	<string>$(PRIVATE_KEY)</string>
+	<key>PUBLIC_KEY</key>
+	<string>$(PUBLIC_KEY)</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Inter-SemiBold.otf</string>
+		<string>Inter-Light.otf</string>
+		<string>Inter-Regular.otf</string>
+		<string>Inter-Medium.otf</string>
+		<string>Inter-Bold.otf</string>
+		<string>Roboto-Bold.ttf</string>
+		<string>Bangers-Regular.ttf</string>
+	</array>
 </dict>
 </plist>
