add offset & limit

--- a/.gitignore
+++ b/.gitignore
@@ -86,5 +86,6 @@ fastlane/test_output
 iOSInjectionProject/
 
 Configuration/Secrets.xcconfig
+Secrets.xcconfig
 
 # End of https://www.toptal.com/developers/gitignore/api/swift
